# flute3

./: CMakeLists.txt  CMakeLists.txt.bk  DQN.py  LICENSE  README.md  environment.yml  flute.cpp  flute.h  requirements.txt  setup.py
etc/: MakeDatVar.sh  MakeDatVar.tcl  POWV.cpp
py_test/: py_test.py
python/: Readme  pyflute.cpp  setup.py
python/pyflute/: __init__.py  __main__.py  _pyflute.cpp
python/pyflute.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
results/: checkpoint_episode_50.pth  dqn_model_final.pth
src/: main.cpp
test/: CMakeLists.txt
tests/: CMakeLists.txt  flute_test.cpp  pyflute_test.py
